@@ -1,3 +1,11 @@
+2003-12-16  Werner Koch  <wk@gnupg.org>
+
+	* assuan-buffer.c: Changed formatting of the debug output prefix.
+	* assuan-util.c (assuan_set_log_stream): Set global log stream if
+	it has not been done yet.
+	* assuan-logging.c (_assuan_set_default_log_stream): New.
+	(assuan_set_assuan_log_prefix): New.
+
 2003-12-11  Werner Koch  <wk@gnupg.org>
 
 	* funopen.c (_assuan_funopen): Renamed from funopen, to keep the
